k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petadopt-service
spec:
  selector:
    app: petadopt
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
